--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-*.class
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
 
+# Class Files #
+*.class
+#
 # Package Files #
 *.jar
 *.war
